Version 1.43:
	- Made the GMP library mandatory
	- Removed the arbitrary precision math library, replaced with GMP
	- Added checks that the input NFS number corresponds to the input
		NFS polynomials (thanks Tom Womack)
	- Deleted the ancient unskewed NFS polynomial selector
	- Removed now-unused double-double code
	- Reset the number of relations and ideals properly when reading
		LP relations with increasing max weight (thanks Greg Childers)
	- Adjusted the library link order in the makefile
	- Added float.h for unix builds (thanks Christian Cornelssen)


Version 1.42: 7/19/09
	- NFS polynomial selection changes:
		- Added support for generating degree-4 and degree-6
		  GNFS polynomials, as well as some tuning for the degree-4
		  case. Degree 6 is not completely done (needs a better
		  root sieve and parameter selection)
		- Added a tweak to the end of stage 1 that makes sure
		  most polynomials passed to stage 2 have third-to-last
		  coefficients that are small enough. This allows stage 
		  2 to run on more candidates, especially when the leading 
		  coefficient is large
		- Added several internal checks
		- Tweaked the stage 1 sieving parameters to make the inner
		  loops longer during large jobs
		- Switched to exponential (not linear) interpolation 
		  when choosing parameters (thanks Tom Womack)
		- Added degree-5 parameters for very large jobs, up to
		  180 digits (thanks Tom Womack)
		- Reduced the minimum NFS input size to just under 90 digits
		- Reverted back to to using the L2-norm for the initial
		  multivariable optimization step in stage 2; using Bernstein's
		  scoring function is not sensitive enough
		- Pushed the file for saved NFS polynomials into the skewed
		  poly selector, instead of making it globally visible in
		  general poly config structures. This also allows the file
		  to only be created if polynomial selection happens
	- NFS filtering changes:
		- Removed most of the NFS-specific singleton removal; instead,