@@ -3,6 +3,8 @@ Version 1.43:
 	- Removed the arbitrary precision math library, replaced with GMP
 	- Added checks that the input NFS number corresponds to the input
 		NFS polynomials (thanks Tom Womack)
+	- Modified the initialization for the NFS square root to be
+		a little more robust (thanks andi47)
 	- Deleted the ancient unskewed NFS polynomial selector
 	- Removed now-unused double-double code
 	- Reset the number of relations and ideals properly when reading
